# parsyng

./: .gitignore  Cargo.toml  LICENSE  justfile
benches/: Cargo.toml  main.rs
benches/bench-comptime/: Cargo.toml
benches/bench-comptime/src/: lib.rs
crates/parsyng-proc-macros/: Cargo.toml
crates/parsyng-proc-macros/src/: bootstrap.rs  derive_parse.rs  derive_to_tokens.rs  lib.rs  parsing_helpers.rs  proc_macro_helper.rs
crates/parsyng-proc-macros/src/bootstrap/: ast.rs  combinator.rs  error.rs  parse.rs
crates/parsyng-proc-macros/src/bootstrap/ast/: delimiter.rs  expression.rs  identifiers.rs  item  item.rs  literal.rs  path.rs  token_stream.rs  tokens.rs  type.rs  visibility.rs
crates/parsyng-quote/: Cargo.toml  justfile
crates/parsyng-quote-macros/: Cargo.toml
crates/parsyng-quote-macros/src/: lib.rs
crates/parsyng-quote/benches/: Cargo.toml  main.rs
crates/parsyng-quote/benches/bench-comptime/: Cargo.toml
crates/parsyng-quote/benches/bench-comptime/src/: lib.rs
crates/parsyng-quote/src/: __private.rs  impls.rs  lib.rs
examples/simple-use/: Cargo.toml
examples/simple-use-macros/: Cargo.toml
examples/simple-use-macros/src/: lib.rs
examples/simple-use/src/: main.rs
src/: ast.rs  combinator.rs  error.rs  lib.rs  parse.rs  proc_macro_ext.rs  span.rs
src/ast/: delimiter.rs  expression.rs  identifiers.rs  item.rs  literal.rs  path.rs  token_stream.rs  tokens.rs  type.rs  visibility.rs
src/ast/item/: associated.rs  constant.rs  implementation.rs  struct.rs
