[package]
name = "bench-comptime"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1", optional = true }
unsynn = { version = "0.3", optional = true, default-features = false, features = ["proc_macro2"] }
parsyng-quote = { path = "../../", optional = true }

[features]
quote = ["dep:quote"]
unsynn = ["dep:unsynn"]
parsyng-quote = ["dep:parsyng-quote"]
proc-macro2 = ["parsyng-quote/proc-macro2"]

empty = []
small = []
big = []
